# bevy-multiscale

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: bari_positions.csv
config/: base_params.yaml
scripts/: README.md  sweep.py  transmission_tree.py
src/: lib.rs  main.rs
src/disease/: immunity.rs  infection.rs  mod.rs  params.rs
src/population/: bari.rs  household.rs  individual.rs  init.rs  mod.rs  neighborhood.rs
src/simulation/: campaign.rs  mod.rs  step.rs  time.rs  transmission.rs
src/ui/: arcs.rs  camera.rs  chart.rs  components.rs  controls.rs  grid.rs  individual_viz.rs  mod.rs  tooltip.rs  viz.rs
src/views/: mod.rs
src/views/individual/: controls.rs  mod.rs  spawn.rs  viz.rs
src/views/neighborhood/: components.rs  controls.rs  mod.rs  spawn.rs  viz.rs
src/views/region/: bari.rs  camera.rs  chart.rs  components.rs  controls.rs  mod.rs  spawn.rs  viz.rs
