[package]
name = "bevy-multiscale"
version = "0.1.0"
edition = "2021"
description = "Bevy-based multiscale polio transmission simulation"

[dependencies]
bevy = "0.13"
bevy_egui = "0.25"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
env_logger = "0.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
