[package]
name = "bevy-multiscale"
version = "0.1.0"
edition = "2021"
description = "Bevy-based multiscale polio transmission simulation"

[dependencies]
bevy = "0.13"
bevy_egui = "0.25"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }

# WASM optimizations
[profile.release]
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
