[package]
name = "bevy-multiscale"
version = "0.1.0"
edition = "2021"
description = "Bevy-based multiscale polio transmission simulation"

[dependencies]
bevy = "0.13"
bevy_egui = "0.25"
egui_plot = "0.26"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "bevy-multiscale"
path = "src/main.rs"

[[bin]]
name = "headless"
path = "src/bin/headless.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }

# WASM optimizations
[profile.release]
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
